--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: php-container
+    container_name: game-list
     volumes:
       - ./src:/var/www/html
     ports:
@@ -11,7 +11,7 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: mysql-container
+    container_name: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -25,7 +25,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin-container
+    container_name: phpmyadmin
     restart: always
     ports:
       - "8081:80"
